// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Турбо-оверлей Навигатор activeDocumentChanged() Изменение с хуком, заменяющим тайтл: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор activeDocumentChanged() Изменение с хуком, заменяющим тайтл: Состояние после навигации 1`] = `
<html>
  <head>
    <title>
      some new title
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор activeDocumentChanged() Изменение с хуком, заменяющим урл и тайтл: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор activeDocumentChanged() Изменение с хуком, заменяющим урл и тайтл: Состояние после навигации 1`] = `
<html>
  <head>
    <title>
      some new title
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор activeDocumentChanged() Изменение с хуком, заменяющим урл: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор activeDocumentChanged() Изменение с хуком, заменяющим урл: Состояние после навигации 1`] = `
<html>
  <head>
    <title>
      кп ру
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор activeDocumentChanged() Просто изменение урла: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор activeDocumentChanged() Просто изменение урла: Состояние после навигации 1`] = `
<html>
  <head>
    <title>
      кп ру
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор changePage() Изменение страницы без хуков: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
        <div
          class="turbo-overlay__body"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="/turbo/s/kp.ru?parent-reqid=1"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор changePage() Изменение страницы без хуков: Состояние после навигации 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
        <div
          class="turbo-overlay__body"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="/turbo/s/kp.ru?parent-reqid=1"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор changePage() Изменение страницы с хуком на другой урл: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
        <div
          class="turbo-overlay__body"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="/turbo/s/kp.ru?parent-reqid=1"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор changePage() Изменение страницы с хуком на другой урл: Состояние после навигации 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
        <div
          class="turbo-overlay__body"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="/turbo/s/kp.ru?parent-reqid=1"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор navigateTurboInTurbo() Навигация для ios12 c хуком, меняющиим урл: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор navigateTurboInTurbo() Навигация для ios12 c хуком, меняющиим урл: Состояние после навигации 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="/turbo/s/kp.ru?parent-reqid=1"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор navigateTurboInTurbo() Навигация для ios12: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор navigateTurboInTurbo() Навигация для ios12: Состояние после навигации 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="/turbo/s/kp.ru?parent-reqid=1"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор navigateTurboInTurbo() Простая навигация: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор navigateTurboInTurbo() Простая навигация: Состояние после навигации 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор relocateTurboInTurbo() Изменение урла без хуков: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор relocateTurboInTurbo() Изменение урла без хуков: Состояние после навигации 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор relocateTurboInTurbo() Изменение урла с хуком на другой урл: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор relocateTurboInTurbo() Изменение урла с хуком на другой урл: Состояние после навигации 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор show() Вызывает addOverrideHostEntries с данными, модифицированными в хуках: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор show() Вызывает addOverrideHostEntries, если пришли данные для подмены: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор show() Не вызывает addOverrideHostEntries, если не пришли данные для подмены: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор show() Правильно отрабатывает без хуков: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор show() Правильно отрабатывает без хуков: Показался первый iframe 1`] = `
<html>
  <head>
    <title>
      Турбо-страницы
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор show() Правильно отрабатывает и заменяет тайтл на необходимый: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор show() Правильно отрабатывает и заменяет тайтл на необходимый: Показался первый iframe 1`] = `
<html>
  <head>
    <title>
      New Title
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор show() Правильно отрабатывает и заменяет урл и тайтл на необходимый: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор show() Правильно отрабатывает и заменяет урл и тайтл на необходимый: Показался первый iframe 1`] = `
<html>
  <head>
    <title>
      New Title
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор show() Правильно отрабатывает и заменяет урл на необходимый: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор show() Правильно отрабатывает и заменяет урл на необходимый: Показался первый iframe 1`] = `
<html>
  <head>
    <title>
      Турбо-страницы
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор show() Правильно отрабатывает с хуком не возвращающем ничего: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Навигатор show() Правильно отрабатывает с хуком не возвращающем ничего: Показался первый iframe 1`] = `
<html>
  <head>
    <title>
      Турбо-страницы
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://test_news.com"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;
